<resources>
    <string name="app_name">ChipsManager</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">LOGOUT</string>
    <string name="join_a_lobby">Join a Lobby</string>
    <string name="create_a_lobby">Create a Lobby</string>
    <string name="lobby_name">Lobby Name</string>
    <string name="your_name">Your Name</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="access">Access</string>
    <string name="exit">Exit</string>
    <string name="pot">POT</string>
    <string name="take_all">Take ALL</string>
    <string name="take_partial">Take PARTIAL</string>
    <string name="bet">BET</string>
    <string name="fold">FOLD</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_500">500</string>
    <string name="_1_000">1.000</string>
    <string name="_5_000">5.000</string>
    <string name="_10_000">10.000</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="ce">CE</string>
    <string name="max_amount">Max Amount</string>
    <string name="all">ALL</string>
    <string name="current_bet">Current Bet</string>
    <string name="folded">FOLDED</string>
    <string name="chips_manager">Chips Manager</string>
    <string name="starting_balance">Starting balance:</string>
    <string-array name="starting_balances">
        <item>1000</item>
        <item>10000</item>
        <item>100000</item>
    </string-array>
</resources>